--- a/test5-heatMap.ipynb
+++ b/test5-heatMap.ipynb
@@ -3081,11 +3081,11 @@
     "df_consume = df_a.groupby(['年', '月']).agg({'信用卡交易金額[新台幣]': 'sum', '信用卡交易筆數': 'sum'}).reset_index()\n",
     "df_consume['信用卡交易金額[百萬]'] = df_consume['信用卡交易金額[新台幣]']/1000000\n",
     "#df_consume['年月'] = df_consume[str(df_consume['年'])+str( df_consume['月'])]\n",
-    "df_consume['日期'] = df_consume.to_datetime(df[['年', '月']].assign(DAY=1))\n",
-    "print(df_consume['年月'])\n",
+    "#df_consume['日期'] = df_consume.to_datetime(df[['年', '月']].assign(DAY=1))\n",
+    "print(df_consume['年'])\n",
     "\n",
     "# 提取 x 和 y 的數據\n",
-    "x = df_consume['年月']\n",
+    "x = df_consume['年']\n",
     "y = df_consume['信用卡交易金額[新台幣]']\n",
     "\n",
     "# 計算線性趨勢線\n",
@@ -4133,7 +4133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
