--- a/test6-heatMap.ipynb
+++ b/test6-heatMap.ipynb
@@ -1600,8 +1600,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*************************************************************\n",
-    "##############      分析6都    ##########################"
+    "# *************************************************************\n",
+    "# #############      分析6都    ##########################"
    ]
   },
   {
@@ -2514,8 +2514,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+++++++++++++++++++++++++++++++++++= df_noOther =++++++++++++++\n",
-    "#選六都的盒鬚圖"
+    "# ++++++++++++++++++++++= df_noOther =++++++++++++++\n",
+    "# 選六都的盒鬚圖"
    ]
   },
   {
@@ -3307,14 +3307,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ================+++  筆數分析  +++=================="
+    "# ================+++  6都筆數分析  +++=================="
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "['信用卡交易筆數']為base的分析"
+    "### 6都_['信用卡交易筆數']為base的分析"
    ]
   },
   {
@@ -3436,7 +3436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "['信用卡交易金額[新台幣]'](百萬)為base的分析"
+    "### 6都_['信用卡交易金額[新台幣]'](百萬)為base的分析"
    ]
   },
   {
@@ -3558,7 +3558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 台北市'年齡層'['信用卡交易金額[新台幣]'](百萬)為base的分析"
+    "### 台北市_'年齡層'_['信用卡交易金額[新台幣]'](百萬)為base的分析"
    ]
   },
   {
@@ -3744,7 +3744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 台北市'年'消費['信用卡交易金額[新台幣]'](百萬)為base的分析"
+    "#### (tmp) 台北市'年'消費['信用卡交易金額[新台幣]'](百萬)為base的分析"
    ]
   },
   {
@@ -3809,7 +3809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#趨勢線 & R平值"
+    "## 6都_趨勢線 & R平值"
    ]
   },
   {
@@ -4687,6 +4687,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -----  試運算 -------"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -4731,7 +4738,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#--------------------------- test ------------------"
+    "## 6都_特徵值 -----標準化與轉換"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ----------------------- test ------------------"
    ]
   },
   {
@@ -4902,7 +4923,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# --------------------- test End -------------------"
+    "### --------------------- test End -------------------"
    ]
   },
   {
